<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/boardGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Player 1 Wins!" />

    <GridLayout
        android:id="@+id/boardGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_1"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_2"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_3"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_4"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_5"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_6"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_7"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_8"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/b9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/game_tile_9"
            android:onClick="onTileClick"
            app:backgroundTint="@null" />

    </GridLayout>

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardGrid"
        tools:text="Player 1's Turn (O)" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player" />

</androidx.constraintlayout.widget.ConstraintLayout>